--- a/components/Assets/index.module.css
+++ b/components/Assets/index.module.css
@@ -5,6 +5,7 @@
     width: 50%;
     margin: 1em auto;
     padding: 1rem 0;
+    transition: all .4s ease-out 0s;
 }
 
 .line {
@@ -29,4 +30,54 @@
 
 .control {
     width: 30%;
+}
+
+.expandbar {
+    display: flex;
+    justify-content: center;
+    margin-top: -32px;
+    padding-bottom: 50px;
+}
+
+.expandbutton {
+    width: 32px;
+    height: 32px;
+    min-width: 32px;
+    min-height: 32px;
+    border-radius: 50%;
+    border: 1px solid #888;
+    cursor: pointer;
+}
+
+.expandbutton:hover {
+    background-color: #888;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdowncontent {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 0 8px;
+    z-index: 1;
+}
+
+.dropdown:hover .dropdowncontent {
+    display: block;
+}
+
+.controllabel {
+    cursor: pointer;
+}
+
+.controlbutton {
+    cursor: pointer;
+    border-top: 1px dashed #888;
+    border-bottom: 1px dashed #888;
 }
