--- a/components/Assets/index.module.css
+++ b/components/Assets/index.module.css
@@ -72,6 +72,10 @@
     display: block;
 }
 
+.dropdown:active .dropdowncontent {
+    display: block;
+}
+
 .controllabel {
     cursor: pointer;
 }
